<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nexteria.nxnoc.MainActivity"
    android:background="#5761A9">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nexteria_logo_img"
        android:src="@drawable/nexteria_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@null"
        android:visibility="gone"
        android:layout_marginBottom="2dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/noc_logo_img"
        android:src="@drawable/noc_logo"
        android:contentDescription="@null"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/nexteria_logo_img" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main_menu_loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:layout_below="@+id/noc_logo_img"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nexteria_loading_img"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/connecting"
            android:id="@+id/connecting_text"
            android:layout_gravity="center_horizontal" />


    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noc_logo_img"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:id="@+id/attendees_info_count"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Počet účastníkov:"
            android:id="@+id/number_of_attendees_label"
            android:layout_below="@+id/noc_logo_img"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/number_of_attendees_onsite"
            android:layout_alignParentRight="true"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_toRightOf="@+id/number_of_attendees_label"
            android:layout_alignBaseline="@+id/number_of_attendees_label"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main_menu_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:layout_below="@+id/noc_logo_img"
        android:gravity="center_vertical|center_horizontal"
        android:visibility="invisible"
        android:layout_centerHorizontal="true">


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/stats"
            android:id="@+id/presence_check_button"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_in_scan"
            android:id="@+id/checkin_scan_button"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_in_name"
            android:id="@+id/check_in_by_name_button" />

    </LinearLayout>

</RelativeLayout>
