<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#69aefc">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#5761A9"
        android:gravity="top"
        android:id="@+id/search_layout">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/imageButton"
            android:src="@drawable/abc_ic_search_api_mtrl_alpha"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:background="#00ffffff"
            android:padding="5dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/search_bar"
            android:layout_gravity="left"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/clear_searchbar"
            android:layout_gravity="right"
            android:src="@drawable/abc_ic_clear_mtrl_alpha"
            android:background="#00ffffff" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nxt_logo"
        android:src="@drawable/nexteria_logo"
        android:layout_centerInParent="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/attendees_search_results"
        android:layout_below="@+id/search_layout"
        android:visibility="visible"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:id="@+id/attendee_checkin_info_view"
        android:gravity="top"
        android:background="#ffffff"
        android:layout_margin="10dp"
        android:visibility="invisible"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="attendee_name"
            android:id="@+id/attendee_name_text"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textSize="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ticket_type"
            android:id="@+id/ticket_type_label"
            android:layout_marginTop="22dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="EARLY_BIRD"
            android:id="@+id/ticket_type_text"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/attendee_note"
            android:id="@+id/attendee_note_label"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/attendee_note_text"
            android:layout_marginLeft="10dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/events"
            android:id="@+id/events_label"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/events_list_container"
            android:layout_gravity="center"
            android:layout_weight="1">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/attendee_name_events_list"
                android:choiceMode="none" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Loading..."
                android:id="@+id/loading_attendee_events_text"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:layout_alignParentBottom="false"
                android:textColor="#000000"
                android:gravity="center_horizontal" />

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:id="@+id/attendee_info_close_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp" />


    </LinearLayout>

</RelativeLayout>